# deadpool-amqprs

./: Cargo.toml  README.md
src/: config.rs  lib.rs
