[package]
name = "deadpool-amqprs"
description = "Dead simple async pool for amqprs"
license = "MIT"
documentation = "https://docs.rs/deadpool-amqprs"
repository = "https://github.com/Cryptex-github/deadpool-amqprs"
authors = ["Cryptex"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.0", default-features = false }
deadpool = { version = "0.9", default-features = false, features = ["managed", "rt_tokio_1"] }
