[package]
name = "deadpool-amqprs"
description = "Dead simple async pool for amqprs"
license = "MIT"
documentation = "https://docs.rs/deadpool-amqprs"
repository = "https://github.com/Cryptex-github/deadpool-amqprs"
authors = ["Cryptex"]
version = "0.3.0"
edition = "2021"
# Basically just `amqprs`'s keywords and categories.
keywords = ["amqp", "rabbitmq", "async", "tokio", "lock-free"]
categories = ["network-programming", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "2.1", default-features = false }
deadpool = { version = "0.12", default-features = false, features = ["managed", "rt_tokio_1"] }
